# Toguzkumalak

./: .gitignore  README.md  Toguzkumalak.sln
Toguzkumalak/: CMakeLists.txt  Toguzkumalak.cpp  Toguzkumalak.vcxproj  Toguzkumalak.vcxproj.filters  arena.cpp  arena.h  compile.py  config.cpp  config.h  config.ini  game.cpp  game.h  human_config.txt  mcts.cpp  mcts.h  mcts.pyx  mcts_selfplay.cpp  mcts_selfplay.h  node.cpp  node.h  pch.h  run.txt  selfplay_config.txt  setup.py  startNET.py  test_config.txt  tnet.cpp  tnet.h  train.cpp  train.h  train_config.txt
Toguzkumalak/x64/Debug/: Toguzkumalak.exe.recipe  Toguzkumalak.ilk  vc143.idb
Toguzkumalak/x64/Debug/Toguzkumalak.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Toguzkumalak.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Toguzkumalak/x64/Release/: Toguzkumalak.exe.recipe  Toguzkumalak.iobj  Toguzkumalak.ipdb
Toguzkumalak/x64/Release/Toguzkumalak.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Toguzkumalak.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cython/: brain.py  check_binaries.py  check_weights.py  compile.py  dataset.py  game.cpp  game_cython.pxd  mcts.pyx  node.cpp  node.h  node_cython.cpp  node_cython.h  node_cython.html  node_cython.pxd  node_cython.pyx  requirements.txt  setup.py  test.py
